tests/trybuild/typed_query_fail_bool_contains.stderr
error[E0599]: no method named `contains` found for struct `QueryBoolField<Q>` in the current scope
 --> tests/trybuild/typed_query_fail_bool_contains.rs:6:48
  |
6 |     let _ = client.classes().validate_schema().contains("true");
  |                                                ^^^^^^^^ method not found in `QueryBoolField<hubuum_client::blocking::Resource<hubuum_client::Class>>`
